parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    INVSTRING
    NEWLINE
    INVCOMNENT
    CONTINUE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> programa funcion
Rule 2     programa -> error
Rule 3     programa -> funcion
Rule 4     funcion -> FUN ID LPAREN mparametros RPAREN locales BEGIN declaraciones END
Rule 5     funcion -> FUN ID LPAREN error RPAREN locales BEGIN declaraciones END
Rule 6     funcion -> FUN ID LPAREN mparametros RPAREN locales BEGIN error END
Rule 7     parametro -> ID DECLARATION tipo
Rule 8     parametro -> ID DECLARATION error
Rule 9     mparametros -> mparametros COMMA parametro
Rule 10    mparametros -> parametro
Rule 11    mparametros -> empty
Rule 12    mparametros -> error COMMA parametro
Rule 13    funcion -> FUN ID LPAREN mparametros RPAREN error BEGIN declaraciones END
Rule 14    mparametros -> mparametros COMMA error
Rule 15    locales -> local
Rule 16    locales -> empty
Rule 17    local -> local parametro SEMI
Rule 18    local -> local funcion SEMI
Rule 19    local -> parametro SEMI
Rule 20    local -> funcion SEMI
Rule 21    local -> local error SEMI
Rule 22    local -> local parametro error
Rule 23    local -> local funcion error
Rule 24    local -> error SEMI
Rule 25    local -> funcion error
Rule 26    local -> parametro error
Rule 27    asignacion -> ID ASSIGN expresion
Rule 28    asignacion -> ID LCORCH index RCORCH ASSIGN expresion
Rule 29    asignacion -> ID ASSIGN error
Rule 30    asignacion -> ID LCORCH error RCORCH ASSIGN expresion
Rule 31    asignacion -> ID LCORCH index RCORCH ASSIGN error
Rule 32    asignacion -> ID error index RCORCH ASSIGN expresion
Rule 33    asignacion -> ID error index error ASSIGN expresion
Rule 34    asignacion -> ID LCORCH index error ASSIGN expresion
Rule 35    declaracion -> WHILE relacion DO declaracion
Rule 36    declaracion -> WHILE error DO declaracion
Rule 37    declaracion -> WHILE relacion DO error
Rule 38    declaracion -> IF relacion THEN declaracion
Rule 39    declaracion -> IF relacion THEN declaracion ELSE declaracion
Rule 40    declaracion -> IF error THEN declaracion
Rule 41    declaracion -> IF relacion THEN error
Rule 42    declaracion -> IF relacion THEN declaracion ELSE error
Rule 43    declaracion -> PRINT LPAREN STRING RPAREN
Rule 44    declaracion -> PRINT LPAREN error RPAREN
Rule 45    declaracion -> PRINT LPAREN STRING error
Rule 46    declaracion -> PRINT error STRING RPAREN
Rule 47    declaracion -> PRINT error STRING error
Rule 48    declaracion -> WRITE LPAREN expresion RPAREN
Rule 49    declaracion -> WRITE LPAREN error RPAREN
Rule 50    declaracion -> WRITE error expresion RPAREN
Rule 51    declaracion -> WRITE LPAREN expresion error
Rule 52    declaracion -> WRITE error expresion error
Rule 53    declaracion -> READ LPAREN expresion RPAREN
Rule 54    declaracion -> READ LPAREN error RPAREN
Rule 55    declaracion -> READ error expresion RPAREN
Rule 56    declaracion -> READ LPAREN expresion error
Rule 57    declaracion -> READ error expresion error
Rule 58    declaracion -> RETURN expresion
Rule 59    declaracion -> RETURN error
Rule 60    declaracion -> BEGIN declaraciones END
Rule 61    declaracion -> expresion
Rule 62    declaracion -> SKIP
Rule 63    declaracion -> BREAK
Rule 64    declaracion -> asignacion
Rule 65    declaraciones -> declaraciones SEMI declaracion
Rule 66    declaraciones -> declaracion
Rule 67    index -> expresion
Rule 68    tipo -> NINT
Rule 69    tipo -> NINT LCORCH expresion RCORCH
Rule 70    tipo -> NFLOAT
Rule 71    tipo -> NFLOAT LCORCH expresion RCORCH
Rule 72    expresion -> expresion PLUS expresion
Rule 73    expresion -> expresion MINUS expresion
Rule 74    expresion -> expresion TIMES expresion
Rule 75    expresion -> expresion DIVIDE expresion
Rule 76    expresion -> MINUS expresion
Rule 77    expresion -> PLUS expresion
Rule 78    expresion -> LPAREN expresion RPAREN
Rule 79    expresion -> LPAREN RPAREN
Rule 80    expresion -> ID LPAREN argumentos RPAREN
Rule 81    expresion -> ID LPAREN RPAREN
Rule 82    expresion -> ID
Rule 83    expresion -> ID LCORCH expresion RCORCH
Rule 84    expresion -> ID LPAREN error RPAREN
Rule 85    expresion -> ID LPAREN argumentos error
Rule 86    expresion -> ID error argumentos RPAREN
Rule 87    expresion -> ID LPAREN error
Rule 88    expresion -> ID error expresion RCORCH
Rule 89    expresion -> numero
Rule 90    expresion -> NINT LPAREN expresion RPAREN
Rule 91    expresion -> NFLOAT LPAREN expresion RPAREN
Rule 92    numero -> INTEGER
Rule 93    numero -> FLOAT
Rule 94    argumentos -> argumentos COMMA expresion
Rule 95    argumentos -> expresion
Rule 96    relacion -> expresion LT expresion
Rule 97    relacion -> expresion GT expresion
Rule 98    relacion -> expresion LE expresion
Rule 99    relacion -> expresion GE expresion
Rule 100   relacion -> expresion EQUALS expresion
Rule 101   relacion -> expresion NE expresion
Rule 102   relacion -> relacion AND relacion
Rule 103   relacion -> relacion OR relacion
Rule 104   relacion -> NOT relacion
Rule 105   relacion -> LPAREN relacion RPAREN
Rule 106   empty -> <empty>

Terminals, with rules where they appear

AND                  : 102
ASSIGN               : 27 28 29 30 31 32 33 34
BEGIN                : 4 5 6 13 60
BREAK                : 63
COMMA                : 9 12 14 94
CONTINUE             : 
DECLARATION          : 7 8
DIVIDE               : 75
DO                   : 35 36 37
ELSE                 : 39 42
END                  : 4 5 6 13 60
EQUALS               : 100
FLOAT                : 93
FUN                  : 4 5 6 13
GE                   : 99
GT                   : 97
ID                   : 4 5 6 7 8 13 27 28 29 30 31 32 33 34 80 81 82 83 84 85 86 87 88
IF                   : 38 39 40 41 42
INTEGER              : 92
INVCOMNENT           : 
INVSTRING            : 
LCORCH               : 28 30 31 34 69 71 83
LE                   : 98
LPAREN               : 4 5 6 13 43 44 45 48 49 51 53 54 56 78 79 80 81 84 85 87 90 91 105
LT                   : 96
MINUS                : 73 76
NE                   : 101
NEWLINE              : 
NFLOAT               : 70 71 91
NINT                 : 68 69 90
NOT                  : 104
OR                   : 103
PLUS                 : 72 77
PRINT                : 43 44 45 46 47
RCORCH               : 28 30 31 32 69 71 83 88
READ                 : 53 54 55 56 57
RETURN               : 58 59
RPAREN               : 4 5 6 13 43 44 46 48 49 50 53 54 55 78 79 80 81 84 86 90 91 105
SEMI                 : 17 18 19 20 21 24 65
SKIP                 : 62
STRING               : 43 45 46 47
THEN                 : 38 39 40 41 42
TIMES                : 74
WHILE                : 35 36 37
WRITE                : 48 49 50 51 52
error                : 2 5 6 8 12 13 14 21 22 23 24 25 26 29 30 31 32 33 33 34 36 37 40 41 42 44 45 46 47 47 49 50 51 52 52 54 55 56 57 57 59 84 85 86 87 88

Nonterminals, with rules where they appear

argumentos           : 80 85 86 94
asignacion           : 64
declaracion          : 35 36 38 39 39 40 42 65 66
declaraciones        : 4 5 13 60 65
empty                : 11 16
expresion            : 27 28 30 32 33 34 48 50 51 52 53 55 56 57 58 61 67 69 71 72 72 73 73 74 74 75 75 76 77 78 83 88 90 91 94 95 96 96 97 97 98 98 99 99 100 100 101 101
funcion              : 1 3 18 20 23 25
index                : 28 31 32 33 34
local                : 15 17 18 21 22 23
locales              : 4 5 6
mparametros          : 4 6 9 13 14
numero               : 89
parametro            : 9 10 12 17 19 22 26
programa             : 1 0
relacion             : 35 37 38 39 41 42 102 102 103 103 104 105
tipo                 : 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . programa funcion
    (2) programa -> . error
    (3) programa -> . funcion
    (4) funcion -> . FUN ID LPAREN mparametros RPAREN locales BEGIN declaraciones END
    (5) funcion -> . FUN ID LPAREN error RPAREN locales BEGIN declaraciones END
    (6) funcion -> . FUN ID LPAREN mparametros RPAREN locales BEGIN error END
    (13) funcion -> . FUN ID LPAREN mparametros RPAREN error BEGIN declaraciones END

    error           shift and go to state 2
    FUN             shift and go to state 3

    programa                       shift and go to state 1
    funcion                        shift and go to state 4

state 1

    (0) S' -> programa .
    (1) programa -> programa . funcion
    (4) funcion -> . FUN ID LPAREN mparametros RPAREN locales BEGIN declaraciones END
    (5) funcion -> . FUN ID LPAREN error RPAREN locales BEGIN declaraciones END
    (6) funcion -> . FUN ID LPAREN mparametros RPAREN locales BEGIN error END
    (13) funcion -> . FUN ID LPAREN mparametros RPAREN error BEGIN declaraciones END

    FUN             shift and go to state 3

    funcion                        shift and go to state 5

state 2

    (2) programa -> error .

    FUN             reduce using rule 2 (programa -> error .)
    $end            reduce using rule 2 (programa -> error .)


state 3

    (4) funcion -> FUN . ID LPAREN mparametros RPAREN locales BEGIN declaraciones END
    (5) funcion -> FUN . ID LPAREN error RPAREN locales BEGIN declaraciones END
    (6) funcion -> FUN . ID LPAREN mparametros RPAREN locales BEGIN error END
    (13) funcion -> FUN . ID LPAREN mparametros RPAREN error BEGIN declaraciones END

    ID              shift and go to state 6


state 4

    (3) programa -> funcion .

    FUN             reduce using rule 3 (programa -> funcion .)
    $end            reduce using rule 3 (programa -> funcion .)


state 5

    (1) programa -> programa funcion .

    FUN             reduce using rule 1 (programa -> programa funcion .)
    $end            reduce using rule 1 (programa -> programa funcion .)


state 6

    (4) funcion -> FUN ID . LPAREN mparametros RPAREN locales BEGIN declaraciones END
    (5) funcion -> FUN ID . LPAREN error RPAREN locales BEGIN declaraciones END
    (6) funcion -> FUN ID . LPAREN mparametros RPAREN locales BEGIN error END
    (13) funcion -> FUN ID . LPAREN mparametros RPAREN error BEGIN declaraciones END

    LPAREN          shift and go to state 7


state 7

    (4) funcion -> FUN ID LPAREN . mparametros RPAREN locales BEGIN declaraciones END
    (5) funcion -> FUN ID LPAREN . error RPAREN locales BEGIN declaraciones END
    (6) funcion -> FUN ID LPAREN . mparametros RPAREN locales BEGIN error END
    (13) funcion -> FUN ID LPAREN . mparametros RPAREN error BEGIN declaraciones END
    (9) mparametros -> . mparametros COMMA parametro
    (10) mparametros -> . parametro
    (11) mparametros -> . empty
    (12) mparametros -> . error COMMA parametro
    (14) mparametros -> . mparametros COMMA error
    (7) parametro -> . ID DECLARATION tipo
    (8) parametro -> . ID DECLARATION error
    (106) empty -> .

    error           shift and go to state 11
    ID              shift and go to state 12
    RPAREN          reduce using rule 106 (empty -> .)
    COMMA           reduce using rule 106 (empty -> .)

    parametro                      shift and go to state 8
    mparametros                    shift and go to state 10
    empty                          shift and go to state 9

state 8

    (10) mparametros -> parametro .

    RPAREN          reduce using rule 10 (mparametros -> parametro .)
    COMMA           reduce using rule 10 (mparametros -> parametro .)


state 9

    (11) mparametros -> empty .

    RPAREN          reduce using rule 11 (mparametros -> empty .)
    COMMA           reduce using rule 11 (mparametros -> empty .)


state 10

    (4) funcion -> FUN ID LPAREN mparametros . RPAREN locales BEGIN declaraciones END
    (6) funcion -> FUN ID LPAREN mparametros . RPAREN locales BEGIN error END
    (13) funcion -> FUN ID LPAREN mparametros . RPAREN error BEGIN declaraciones END
    (9) mparametros -> mparametros . COMMA parametro
    (14) mparametros -> mparametros . COMMA error

    RPAREN          shift and go to state 13
    COMMA           shift and go to state 14


state 11

    (5) funcion -> FUN ID LPAREN error . RPAREN locales BEGIN declaraciones END
    (12) mparametros -> error . COMMA parametro

    RPAREN          shift and go to state 15
    COMMA           shift and go to state 16


state 12

    (7) parametro -> ID . DECLARATION tipo
    (8) parametro -> ID . DECLARATION error

    DECLARATION     shift and go to state 17


state 13

    (4) funcion -> FUN ID LPAREN mparametros RPAREN . locales BEGIN declaraciones END
    (6) funcion -> FUN ID LPAREN mparametros RPAREN . locales BEGIN error END
    (13) funcion -> FUN ID LPAREN mparametros RPAREN . error BEGIN declaraciones END
    (15) locales -> . local
    (16) locales -> . empty
    (17) local -> . local parametro SEMI
    (18) local -> . local funcion SEMI
    (19) local -> . parametro SEMI
    (20) local -> . funcion SEMI
    (21) local -> . local error SEMI
    (22) local -> . local parametro error
    (23) local -> . local funcion error
    (24) local -> . error SEMI
    (25) local -> . funcion error
    (26) local -> . parametro error
    (106) empty -> .
    (7) parametro -> . ID DECLARATION tipo
    (8) parametro -> . ID DECLARATION error
    (4) funcion -> . FUN ID LPAREN mparametros RPAREN locales BEGIN declaraciones END
    (5) funcion -> . FUN ID LPAREN error RPAREN locales BEGIN declaraciones END
    (6) funcion -> . FUN ID LPAREN mparametros RPAREN locales BEGIN error END
    (13) funcion -> . FUN ID LPAREN mparametros RPAREN error BEGIN declaraciones END

    error           shift and go to state 20
    BEGIN           reduce using rule 106 (empty -> .)
    ID              shift and go to state 12
    FUN             shift and go to state 3

    parametro                      shift and go to state 18
    locales                        shift and go to state 22
    local                          shift and go to state 21
    empty                          shift and go to state 19
    funcion                        shift and go to state 23

state 14

    (9) mparametros -> mparametros COMMA . parametro
    (14) mparametros -> mparametros COMMA . error
    (7) parametro -> . ID DECLARATION tipo
    (8) parametro -> . ID DECLARATION error

    error           shift and go to state 25
    ID              shift and go to state 12

    parametro                      shift and go to state 24

state 15

    (5) funcion -> FUN ID LPAREN error RPAREN . locales BEGIN declaraciones END
    (15) locales -> . local
    (16) locales -> . empty
    (17) local -> . local parametro SEMI
    (18) local -> . local funcion SEMI
    (19) local -> . parametro SEMI
    (20) local -> . funcion SEMI
    (21) local -> . local error SEMI
    (22) local -> . local parametro error
    (23) local -> . local funcion error
    (24) local -> . error SEMI
    (25) local -> . funcion error
    (26) local -> . parametro error
    (106) empty -> .
    (7) parametro -> . ID DECLARATION tipo
    (8) parametro -> . ID DECLARATION error
    (4) funcion -> . FUN ID LPAREN mparametros RPAREN locales BEGIN declaraciones END
    (5) funcion -> . FUN ID LPAREN error RPAREN locales BEGIN declaraciones END
    (6) funcion -> . FUN ID LPAREN mparametros RPAREN locales BEGIN error END
    (13) funcion -> . FUN ID LPAREN mparametros RPAREN error BEGIN declaraciones END

    error           shift and go to state 26
    BEGIN           reduce using rule 106 (empty -> .)
    ID              shift and go to state 12
    FUN             shift and go to state 3

    parametro                      shift and go to state 18
    locales                        shift and go to state 27
    local                          shift and go to state 21
    empty                          shift and go to state 19
    funcion                        shift and go to state 23

state 16

    (12) mparametros -> error COMMA . parametro
    (7) parametro -> . ID DECLARATION tipo
    (8) parametro -> . ID DECLARATION error

    ID              shift and go to state 12

    parametro                      shift and go to state 28

state 17

    (7) parametro -> ID DECLARATION . tipo
    (8) parametro -> ID DECLARATION . error
    (68) tipo -> . NINT
    (69) tipo -> . NINT LCORCH expresion RCORCH
    (70) tipo -> . NFLOAT
    (71) tipo -> . NFLOAT LCORCH expresion RCORCH

    error           shift and go to state 31
    NINT            shift and go to state 29
    NFLOAT          shift and go to state 32

    tipo                           shift and go to state 30

state 18

    (19) local -> parametro . SEMI
    (26) local -> parametro . error

    SEMI            shift and go to state 33
    error           shift and go to state 34


state 19

    (16) locales -> empty .

    BEGIN           reduce using rule 16 (locales -> empty .)


state 20

    (13) funcion -> FUN ID LPAREN mparametros RPAREN error . BEGIN declaraciones END
    (24) local -> error . SEMI

    BEGIN           shift and go to state 35
    SEMI            shift and go to state 36


state 21

    (15) locales -> local .
    (17) local -> local . parametro SEMI
    (18) local -> local . funcion SEMI
    (21) local -> local . error SEMI
    (22) local -> local . parametro error
    (23) local -> local . funcion error
    (7) parametro -> . ID DECLARATION tipo
    (8) parametro -> . ID DECLARATION error
    (4) funcion -> . FUN ID LPAREN mparametros RPAREN locales BEGIN declaraciones END
    (5) funcion -> . FUN ID LPAREN error RPAREN locales BEGIN declaraciones END
    (6) funcion -> . FUN ID LPAREN mparametros RPAREN locales BEGIN error END
    (13) funcion -> . FUN ID LPAREN mparametros RPAREN error BEGIN declaraciones END

    BEGIN           reduce using rule 15 (locales -> local .)
    error           shift and go to state 38
    ID              shift and go to state 12
    FUN             shift and go to state 3

    parametro                      shift and go to state 37
    funcion                        shift and go to state 39

state 22

    (4) funcion -> FUN ID LPAREN mparametros RPAREN locales . BEGIN declaraciones END
    (6) funcion -> FUN ID LPAREN mparametros RPAREN locales . BEGIN error END

    BEGIN           shift and go to state 40


state 23

    (20) local -> funcion . SEMI
    (25) local -> funcion . error

    SEMI            shift and go to state 42
    error           shift and go to state 41


state 24

    (9) mparametros -> mparametros COMMA parametro .

    RPAREN          reduce using rule 9 (mparametros -> mparametros COMMA parametro .)
    COMMA           reduce using rule 9 (mparametros -> mparametros COMMA parametro .)


state 25

    (14) mparametros -> mparametros COMMA error .

    RPAREN          reduce using rule 14 (mparametros -> mparametros COMMA error .)
    COMMA           reduce using rule 14 (mparametros -> mparametros COMMA error .)


state 26

    (24) local -> error . SEMI

    SEMI            shift and go to state 36


state 27

    (5) funcion -> FUN ID LPAREN error RPAREN locales . BEGIN declaraciones END

    BEGIN           shift and go to state 43


state 28

    (12) mparametros -> error COMMA parametro .

    RPAREN          reduce using rule 12 (mparametros -> error COMMA parametro .)
    COMMA           reduce using rule 12 (mparametros -> error COMMA parametro .)


state 29

    (68) tipo -> NINT .
    (69) tipo -> NINT . LCORCH expresion RCORCH

    RPAREN          reduce using rule 68 (tipo -> NINT .)
    COMMA           reduce using rule 68 (tipo -> NINT .)
    SEMI            reduce using rule 68 (tipo -> NINT .)
    error           reduce using rule 68 (tipo -> NINT .)
    LCORCH          shift and go to state 44


state 30

    (7) parametro -> ID DECLARATION tipo .

    RPAREN          reduce using rule 7 (parametro -> ID DECLARATION tipo .)
    COMMA           reduce using rule 7 (parametro -> ID DECLARATION tipo .)
    SEMI            reduce using rule 7 (parametro -> ID DECLARATION tipo .)
    error           reduce using rule 7 (parametro -> ID DECLARATION tipo .)


state 31

    (8) parametro -> ID DECLARATION error .

    RPAREN          reduce using rule 8 (parametro -> ID DECLARATION error .)
    COMMA           reduce using rule 8 (parametro -> ID DECLARATION error .)
    SEMI            reduce using rule 8 (parametro -> ID DECLARATION error .)
    error           reduce using rule 8 (parametro -> ID DECLARATION error .)


state 32

    (70) tipo -> NFLOAT .
    (71) tipo -> NFLOAT . LCORCH expresion RCORCH

    RPAREN          reduce using rule 70 (tipo -> NFLOAT .)
    COMMA           reduce using rule 70 (tipo -> NFLOAT .)
    SEMI            reduce using rule 70 (tipo -> NFLOAT .)
    error           reduce using rule 70 (tipo -> NFLOAT .)
    LCORCH          shift and go to state 45


state 33

    (19) local -> parametro SEMI .

    error           reduce using rule 19 (local -> parametro SEMI .)
    ID              reduce using rule 19 (local -> parametro SEMI .)
    FUN             reduce using rule 19 (local -> parametro SEMI .)
    BEGIN           reduce using rule 19 (local -> parametro SEMI .)


state 34

    (26) local -> parametro error .

    error           reduce using rule 26 (local -> parametro error .)
    ID              reduce using rule 26 (local -> parametro error .)
    FUN             reduce using rule 26 (local -> parametro error .)
    BEGIN           reduce using rule 26 (local -> parametro error .)


state 35

    (13) funcion -> FUN ID LPAREN mparametros RPAREN error BEGIN . declaraciones END
    (65) declaraciones -> . declaraciones SEMI declaracion
    (66) declaraciones -> . declaracion
    (35) declaracion -> . WHILE relacion DO declaracion
    (36) declaracion -> . WHILE error DO declaracion
    (37) declaracion -> . WHILE relacion DO error
    (38) declaracion -> . IF relacion THEN declaracion
    (39) declaracion -> . IF relacion THEN declaracion ELSE declaracion
    (40) declaracion -> . IF error THEN declaracion
    (41) declaracion -> . IF relacion THEN error
    (42) declaracion -> . IF relacion THEN declaracion ELSE error
    (43) declaracion -> . PRINT LPAREN STRING RPAREN
    (44) declaracion -> . PRINT LPAREN error RPAREN
    (45) declaracion -> . PRINT LPAREN STRING error
    (46) declaracion -> . PRINT error STRING RPAREN
    (47) declaracion -> . PRINT error STRING error
    (48) declaracion -> . WRITE LPAREN expresion RPAREN
    (49) declaracion -> . WRITE LPAREN error RPAREN
    (50) declaracion -> . WRITE error expresion RPAREN
    (51) declaracion -> . WRITE LPAREN expresion error
    (52) declaracion -> . WRITE error expresion error
    (53) declaracion -> . READ LPAREN expresion RPAREN
    (54) declaracion -> . READ LPAREN error RPAREN
    (55) declaracion -> . READ error expresion RPAREN
    (56) declaracion -> . READ LPAREN expresion error
    (57) declaracion -> . READ error expresion error
    (58) declaracion -> . RETURN expresion
    (59) declaracion -> . RETURN error
    (60) declaracion -> . BEGIN declaraciones END
    (61) declaracion -> . expresion
    (62) declaracion -> . SKIP
    (63) declaracion -> . BREAK
    (64) declaracion -> . asignacion
    (72) expresion -> . expresion PLUS expresion
    (73) expresion -> . expresion MINUS expresion
    (74) expresion -> . expresion TIMES expresion
    (75) expresion -> . expresion DIVIDE expresion
    (76) expresion -> . MINUS expresion
    (77) expresion -> . PLUS expresion
    (78) expresion -> . LPAREN expresion RPAREN
    (79) expresion -> . LPAREN RPAREN
    (80) expresion -> . ID LPAREN argumentos RPAREN
    (81) expresion -> . ID LPAREN RPAREN
    (82) expresion -> . ID
    (83) expresion -> . ID LCORCH expresion RCORCH
    (84) expresion -> . ID LPAREN error RPAREN
    (85) expresion -> . ID LPAREN argumentos error
    (86) expresion -> . ID error argumentos RPAREN
    (87) expresion -> . ID LPAREN error
    (88) expresion -> . ID error expresion RCORCH
    (89) expresion -> . numero
    (90) expresion -> . NINT LPAREN expresion RPAREN
    (91) expresion -> . NFLOAT LPAREN expresion RPAREN
    (27) asignacion -> . ID ASSIGN expresion
    (28) asignacion -> . ID LCORCH index RCORCH ASSIGN expresion
    (29) asignacion -> . ID ASSIGN error
    (30) asignacion -> . ID LCORCH error RCORCH ASSIGN expresion
    (31) asignacion -> . ID LCORCH index RCORCH ASSIGN error
    (32) asignacion -> . ID error index RCORCH ASSIGN expresion
    (33) asignacion -> . ID error index error ASSIGN expresion
    (34) asignacion -> . ID LCORCH index error ASSIGN expresion
    (92) numero -> . INTEGER
    (93) numero -> . FLOAT

    WHILE           shift and go to state 50
    IF              shift and go to state 63
    PRINT           shift and go to state 51
    WRITE           shift and go to state 60
    READ            shift and go to state 48
    RETURN          shift and go to state 47
    BEGIN           shift and go to state 54
    SKIP            shift and go to state 58
    BREAK           shift and go to state 66
    MINUS           shift and go to state 52
    PLUS            shift and go to state 56
    LPAREN          shift and go to state 61
    ID              shift and go to state 62
    NINT            shift and go to state 55
    NFLOAT          shift and go to state 53
    INTEGER         shift and go to state 57
    FLOAT           shift and go to state 46

    expresion                      shift and go to state 64
    asignacion                     shift and go to state 65
    numero                         shift and go to state 59
    declaraciones                  shift and go to state 49
    declaracion                    shift and go to state 67

state 36

    (24) local -> error SEMI .
